--- a/uid/bookmarklet/index.html
+++ b/uid/bookmarklet/index.html
@@ -5,10 +5,10 @@ title: "Useful Bookmarklets"
 
 <p>Drag the following bookmarklets to your bookmark folder or bar.</p>
 
-<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/automated-publish.js'); document.body.appendChild(jsCode);}());">Site Admin Publish</a>
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/automated-publish.js'); document.body.appendChild(jsCode);}());">Site Admin Publish (Legacy)</a>
 
 <p>Used to automate publishing in Site Admin. Will publish 10 files at a time until finished.</p>
 
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Get Career Site Pages</a>
 
-<p>Used to retrieve a list of all pages on a careers site.</p>
+<p>Used to retrieve a list of all pages on a careers site. Works on both QA and Production.</p>
