--- a/uid/bookmarklet/index.html
+++ b/uid/bookmarklet/index.html
@@ -11,4 +11,8 @@ title: "Useful Bookmarklets"
 
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Get Career Site Pages</a>
 
-<p>Used to retrieve a list of all pages on a careers site. Works on both QA and Production.</p>
+<p>Used to retrieve and output a spreadhseet of all pages on a careers site. Works on both QA and Production.</p>
+
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/jobs.js'); document.body.appendChild(jsCode);}());">Get Job Feed</a>
+
+<p>Used to retrieve and output a spreadhseet of all jobs on a careers site. Works on both QA and Production.</p>
