--- a/uid/bookmarklet/index.html
+++ b/uid/bookmarklet/index.html
@@ -3,12 +3,12 @@ noindex: true
 title: "Useful Bookmarklets"
 ---
 
-<p>Drag the following bookmarklets to your bookmark folder or bar.</p>
+<p>Drag the following bookmarklets to your browser's bookmark folder or bar.</p>
 
-<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/automated-publish.js'); document.body.appendChild(jsCode);}());">Site Admin Publish (Legacy)</a>
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/automated-publish.js'); document.body.appendChild(jsCode);}());">Career Site Publish</a>
 
-<p>Used to automate publishing in Site Admin. Will publish 10 files at a time until finished.</p>
+<p>Used to automate publishing of a careers site. Will publish 10 files at a time until task is completed. Use on any publishing admin page.</p>
 
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Get Career Site Pages</a>
 
-<p>Used to retrieve and output a spreadhseet of all pages on a careers site. Works on both QA and Production.</p> 
+<p>Used to retrieve and output a spreadhseet of all pages on a careers site by reading sitemap.xml. Works on both QA and Production domains. For accessibility testing, only generate list of pages on QA.</p> 
