--- a/uid/bookmarklet/index.html
+++ b/uid/bookmarklet/index.html
@@ -7,7 +7,7 @@ title: "Useful Bookmarklets"
 
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/automated-publish.js'); document.body.appendChild(jsCode);}());">Career Site Publish</a>
 
-<p>Used to automate publishing of a careers site. Will publish 10 files at a time until task is completed. Use on any publishing admin page.</p>
+<p>Used to automate publishing of a careers site. Will publish 20 files at a time until task is completed. Use on any publishing admin page. Open dev console to see status of publishing.</p>
 
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/uid/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Get Career Site Pages</a>
 
