Path updates, locking down site

--- a/spell/zoom/index.html
+++ b/spell/zoom/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0, viewport-fit=cover" name="viewport">
+  <meta content="noindex, nofollow" name="robots">
   <meta http-equiv="refresh" content="0; URL=https://radancy.zoom.us/my/spell?pwd=UEhaT1ozanVSSVkybGNIK0FCYmVkdz09">
-  <style>body {background-color: #fff;}</style>
   <title>Spell's Zoom Meeting</title>
 </head>
 
@@ -12,9 +12,9 @@
 
   <main>
   
-	<img src="https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg?s=200" alt="Michael Spellacy">
+	  <img src="https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg?s=200" alt="Michael Spellacy">
 
-    <p><a href="https://radancy.zoom.us/my/spell?pwd=UEhaT1ozanVSSVkybGNIK0FCYmVkdz09">Spell's Zoom Meeting (Link may redirect)</a></p>
+    <p><a href="https://radancy.zoom.us/my/spell?pwd=UEhaT1ozanVSSVkybGNIK0FCYmVkdz09">Spell's Zoom Meeting...</a></p>
 
   </main>
 
