--- a/_posts/2021-08-05-accessible-html5-video.html
+++ b/_posts/2021-08-05-accessible-html5-video.html
@@ -1,5 +1,5 @@
 ---
-author: Michael "Spell" Spellacy
+author: Michael Spellacy (Spell)
 date: "2021-08-05 00:48:34"
 disclosure: true
 email: michael.spellacy@radancy.com
