--- a/_posts/2022-04-06-guidance-on-form-labels.html
+++ b/_posts/2022-04-06-guidance-on-form-labels.html
@@ -1,5 +1,5 @@
 ---
-author: Michael "Spell" Spellacy
+author: Michael Spellacy (Spell)
 date: "2022-04-06 09:27:48"
 disclosure: true
 email: michael.spellacy@radancy.com
