--- a/_posts/2023-06-16-guidance-on-new-windows.html
+++ b/_posts/2023-06-16-guidance-on-new-windows.html
@@ -1,5 +1,5 @@
 ---
-author: Michael "Spell" Spellacy
+author: Michael Spellacy (Spell)
 date: "2023-06-16 10:42:04"
 email: michael.spellacy@radancy.com
 img: https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg
