--- a/_posts/2015-03-15-photoshop-guidelines.html
+++ b/_posts/2015-03-15-photoshop-guidelines.html
@@ -4,6 +4,7 @@ date: "2015-03-15 15:20:00"
 email: debbie.foerst@radancy.com
 img: https://avatars.githubusercontent.com/u/6609883?s=400&v=4
 layout: micropubpost
+pronouns: She/Her
 role: Senior Front-end Engineer
 tags: Creative Photoshop
 title: "Guidelines for Preparing Photoshop Files for Web Developers"
