--- a/_posts/2023-06-16-guidance-on-new-windows.html
+++ b/_posts/2023-06-16-guidance-on-new-windows.html
@@ -4,6 +4,7 @@ date: "2023-06-16 10:42:04"
 email: michael.spellacy@radancy.com
 img: https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg
 layout: micropubpost
+pronouns: He/Him
 role: Director, Accessibility
 tags: Accessibility
 title: "Guidance on Designing and Implementing New Windows"
