--- a/_posts/2021-08-05-accessible-html5-video.html
+++ b/_posts/2021-08-05-accessible-html5-video.html
@@ -5,6 +5,7 @@ disclosure: true
 email: michael.spellacy@radancy.com
 img: https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg
 layout: micropubpost
+pronouns: He/Him
 role: Director, Accessibility
 tags: Accessibility Development
 title: "Accessible HTML5 Video with Captions and Transcript"
