--- a/_posts/2022-04-06-guidance-on-form-labels.html
+++ b/_posts/2022-04-06-guidance-on-form-labels.html
@@ -6,6 +6,7 @@ email: michael.spellacy@radancy.com
 img: https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg
 layout: micropubpost
 localcss: /media/2022-04-06-guidance-on-form-labels/init.css
+pronouns: He/Him
 role: Director, Accessibility
 tags: Accessibility Development
 title: "Guidance on Designing & Implementing Form Labels"
