--- a/_posts/2015-02-24-code-review.html
+++ b/_posts/2015-02-24-code-review.html
@@ -4,7 +4,7 @@ date: "2015-02-24 11:47:25"
 email: digitalsolutions@tmp.com
 img: https://radancy.dev/img/app/logo-72.png
 layout: micropubpost
-tags: Code Review Development Process
+tags: Article Code Review Development Process
 title: "Code Review Process"
 ---
 
