--- a/_posts/2015-03-15-photoshop-guidelines.html
+++ b/_posts/2015-03-15-photoshop-guidelines.html
@@ -6,7 +6,7 @@ img: https://avatars.githubusercontent.com/u/6609883?s=400&v=4
 layout: micropubpost
 pronouns: She/Her
 role: Senior Front-end Engineer
-tags: Creative Photoshop
+tags: Article Creative Photoshop
 title: "Guidelines for Preparing Photoshop Files for Web Developers"
 ---
 
