--- a/_posts/2021-08-05-accessible-html5-video/2021-08-05-accessible-html5-video.html
+++ b/_posts/2021-08-05-accessible-html5-video/2021-08-05-accessible-html5-video.html
@@ -7,7 +7,7 @@ img: https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg
 layout: micropubpost
 pronouns: He/Him
 role: Director, Accessibility
-tags: Accessibility Development
+tags: Accessibility Article Development
 title: "Accessible HTML5 Video with Captions and Transcript"
 ---
 
