--- a/_posts/2022-04-06-guidance-on-form-labels.html
+++ b/_posts/2022-04-06-guidance-on-form-labels.html
@@ -8,7 +8,7 @@ layout: micropubpost
 localcss: /media/2022-04-06-guidance-on-form-labels/init.css
 pronouns: He/Him
 role: Director, Accessibility
-tags: Accessibility Development
+tags: Article Accessibility Development
 title: "Guidance on Designing & Implementing Form Labels"
 update: 2024-02-21 02:21:11
 ---
