--- a/_posts/2022-12-06-related-content/2022-12-06-related-content.html
+++ b/_posts/2022-12-06-related-content/2022-12-06-related-content.html
@@ -8,7 +8,7 @@ localcss: /media/2022-12-06-related-content/init.css
 localjsnote: false
 pronouns: He/Him
 role: Director, Accessibility
-tags: Accessibility Development
+tags: Accessibility Article Development
 title: "A Better Way To Link Related Content Cards"
 ---
 
