--- a/_posts/2023-06-16-guidance-on-new-windows.html
+++ b/_posts/2023-06-16-guidance-on-new-windows.html
@@ -6,7 +6,7 @@ img: https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg
 layout: micropubpost
 pronouns: He/Him
 role: Director, Accessibility
-tags: Accessibility
+tags: Article Accessibility
 title: "Guidance on Designing and Implementing New Windows"
 update: "2024-02-14 08:32:27"
 ---
