--- a/_posts/2021-02-24-accessibility-overlay.html
+++ b/_posts/2021-02-24-accessibility-overlay.html
@@ -6,7 +6,7 @@ img: https://www.gravatar.com/avatar/89e429d4a3effa9601cd19a851c0003e.jpg
 layout: micropubpost
 pronouns: He/Him
 role: Director, Accessibility
-tags: Accessibility Development
+tags: Article Accessibility Development
 title: "Should I Use An Accessibility Overlay?"
 ---
 
