--- a/_posts/2015-02-24-code-review.html
+++ b/_posts/2015-02-24-code-review.html
@@ -1,9 +1,11 @@
 ---
-author: "Radancy"
+author: "Seth Lopez"
 date: "2015-02-24 11:47:25"
-email: digitalsolutions@tmp.com
-img: https://radancy.dev/img/app/logo-72.png
+email: seth.lopez@radancy.com
+img: https://avatars.githubusercontent.com/u/5733658?v=4
 layout: micropubpost
+pronouns: He/Him
+role: User Interface Developer
 tags: Article Code Review Development Process
 title: "Code Review Process"
 ---
