--- a/_posts/2022-04-06-guidance-on-form-labels.html
+++ b/_posts/2022-04-06-guidance-on-form-labels.html
@@ -78,7 +78,7 @@ update: 2024-02-21 02:21:11
 
   <h2>Floating Labels: A Word of Warning</h2>
 
-  <p>Including a visible label, often outside of the field, is <strong>always the best solution</strong>. However, there may be times when this is not always possible. In such cases, the <a href="https://radancy.dev/component-library/floating-labels/">floating label</a> technique could be used, but there are <a href="https://medium.com/simple-human/floating-labels-are-a-bad-idea-82edb64220f6">risks with this method</a> that one should be familiar with before deciding to implement. Approach usage with the utmost of caution.</p>
+  <p>Including a visible label, often outside of the field, is <strong>always the best solution</strong>. However, there may be times when this is not always possible. In such cases, the <a href="/floating-labels/">floating label</a> technique could be used, but there are <a href="https://medium.com/simple-human/floating-labels-are-a-bad-idea-82edb64220f6">risks with this method</a> that one should be familiar with before deciding to implement. Approach usage with the utmost of caution.</p>
 
 </section>
 
@@ -128,7 +128,7 @@ update: 2024-02-21 02:21:11
 
     <h3>Placeholders May Not Be Used With Hidden Labels <span class="alert">(Avoid)</span></h3>
 
-    <p>Using a placeholder value and hiding the label does not solve the problems we seek to avoid. While hiding labels may seem like a terrific way to address accessibility, it is often prone to issue. For example, we may be hiding a label that includes <a href="#placeholder-redundancy">redundant placeholder text</a>. All we have done is mask the issue, visually. Include labels or use the <a href="https://radancy.dev/component-library/floating-labels/">floating label</a> pattern instead.</p>
+    <p>Using a placeholder value and hiding the label does not solve the problems we seek to avoid. While hiding labels may seem like a terrific way to address accessibility, it is often prone to issue. For example, we may be hiding a label that includes <a href="#placeholder-redundancy">redundant placeholder text</a>. All we have done is mask the issue, visually. Include labels or use the <a href="/floating-labels/">floating label</a> pattern instead.</p>
 
     <label class="sr-only" for="example-3-keyword">Keyword</label>
 
