--- a/bookmarklet/index.html
+++ b/bookmarklet/index.html
@@ -4,10 +4,10 @@ title: "Useful Bookmarklets"
 
 <p>Drag the following bookmarklets to your browser's bookmark folder or bar.</p>
 
-<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/tools/bookmarklet/automated-publish.js'); document.body.appendChild(jsCode);}());">Career Site Publish</a>
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/automated-publish.js'); document.body.appendChild(jsCode);}());">Career Site Publish</a>
 
 <p>Used to automate publishing of a careers site. Will publish 20 files at a time until task is completed. Use on any publishing admin page. Open dev console to see status of publishing.</p>
 
-<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/tools/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Get Career Site Pages</a>
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Get Career Site Pages</a>
 
 <p>Used to retrieve and output a spreadhseet of all pages on a careers site by reading sitemap.xml. Works on both QA and Production domains. For accessibility testing, only generate list of pages on QA.</p> 
