--- a/_posts/2021-08-05-accessible-html5-video/code-accessible-html5-video.html
+++ b/_posts/2021-08-05-accessible-html5-video/code-accessible-html5-video.html
@@ -7,7 +7,7 @@
 
     <summary class="btn">Transcript</summary>
     
-    <p><strong>Narrator:</strong> Luke Skywalker and Han Solo rescue the princess, destroy the Death Star, but their story didn't end there.</p>
+    <p><strong>Narrator (Harrison Ford):</strong> Luke Skywalker and Han Solo rescue the princess, destroy the Death Star, but their story didn't end there.</p>
   
     <p>Now, the creators of the biggest smash hit of all time, bring you the next episode in the "Star Wars" saga, "The Empire Strikes Back."</p>
   
@@ -17,7 +17,7 @@
   
     <p>A galactic odyssey against oppression.</p>
   
-    <p>A big new sprawling space adventure in the "Star Wars" saga, "The Empire Strikes Back."</p>
+    <p>A big new sprawling space adventure in the "Star Wars" saga, <a href="https://www.imdb.com/title/tt0080684/">"The Empire Strikes Back</a>."</p>
   
     <p>Coming to your galaxy next summer.</p>
 
