--- a/_posts/2021-08-05-accessible-html5-video/code-accessible-html5-video.html
+++ b/_posts/2021-08-05-accessible-html5-video/code-accessible-html5-video.html
@@ -17,7 +17,7 @@
   
     <p>A galactic odyssey against oppression.</p>
   
-    <p>A big new sprawling space adventure in the "Star Wars" saga, <a href="https://www.imdb.com/title/tt0080684/">"The Empire Strikes Back</a>."</p>
+    <p>A big new sprawling space adventure in the "Star Wars" saga, "<a href="https://www.imdb.com/title/tt0080684/">The Empire Strikes Back</a>."</p>
   
     <p>Coming to your galaxy next summer.</p>
 
