--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@ card: true
 
 		<h2 class="card__title"><a class="card__trigger" href="/a11y/">Accessibility at Radancy</a></h2>
   
-		<p class="card__summary">Discover a comprehensive suite of accessibility resources and tools tailored for Radancy employees.</p>
+		<div class="card__summary">
+			
+			<p>Discover a comprehensive suite of accessibility resources and tools tailored for Radancy employees.</p>
+
+		</div>
   
 	  </div>
   
@@ -25,7 +29,11 @@ card: true
   
 		  <h2 class="card__title"><a class="card__trigger" href="/component-library/">Component Library</a></h2>
 	
-		  <p class="card__summary">Access a library of modular components that seamlessly combine to empower the creation of dynamic website interfaces.</p>
+		  <div class="card__summary">
+			
+			<p>Access a library of modular components that seamlessly combine to empower the creation of dynamic website interfaces.</p>
+
+		  </div>
 	
 		</div>
 	
@@ -37,7 +45,11 @@ card: true
   
 		  <h2 class="card__title"><a class="card__trigger" href="/magicbullet/">MagicBullet</a></h2>
 	
-		  <p class="card__summary">Utilize a script importer designed to seamlessly load beneficial fixes, enhanced functionality, and additional features.</p>
+		  <div class="card__summary">
+			
+			<p>Utilize a script importer designed to seamlessly load beneficial fixes, enhanced functionality, and additional features.</p>
+
+		  </div>
 	
 		</div>
 	
@@ -49,7 +61,11 @@ card: true
   
 		  <h2 class="card__title"><a class="card__trigger" href="/blog/">Radancy DevBlog</a></h2>
   
-		  <p class="card__summary">Explore Radancy's DevBlog, brimming with insightful posts and expert guidance covering a diverse array of topics from our Subject Matter Experts.</p>
+		  <div class="card__summary">
+			
+			<p>Explore Radancy's DevBlog, brimming with insightful posts and expert guidance covering a diverse array of topics from our Subject Matter Experts.</p>
+
+		  </div>
 	
 		</div>
 	
@@ -61,7 +77,11 @@ card: true
   
 		  <h2 class="card__title"><a class="card__trigger" href="/uid/code-standards/">User Interface Standards and Guidelines</a></h2>
 	
-		  <p class="card__summary">Learn more about Radancy's established practices for HTML, CSS, and JavaScript development, alongside industry-wide best practices embraced by our designers and developers.</p>
+		  <div class="card__summary">
+			
+			<p>Learn more about Radancy's established practices for HTML, CSS, and JavaScript development, alongside industry-wide best practices embraced by our designers and developers.</p>
+
+		  </div>
 	
 		</div>
 	
