--- a/bookmarklet/index.html
+++ b/bookmarklet/index.html
@@ -8,6 +8,10 @@ title: "Useful Bookmarklets"
 
 <p>Used to automate publishing of a careers site. Will publish 20 files at a time until task is completed. Use on any publishing admin page. Open dev console to see status of publishing.</p>
 
-<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Get Career Site Pages</a>
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Career Site Pages (Sitemap)</a>
 
-<p>Used to retrieve and output a spreadhseet of all pages on a careers site by reading sitemap.xml. Works on both QA and Production domains. For accessibility testing, only generate list of pages on QA.</p> 
+<p>Used to retrieve and output a spreadhseet of <strong>all</strong> pages on a careers site based on sitemap.xml. Works on both QA and Production domains.</p> 
+
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/a11y.js'); document.body.appendChild(jsCode);}());">Career Site Pages (A11y Testing)</a>
+
+<p>Used to retrieve and output a spreadhseet of <strong>necessary</strong> pages on a careers site that will be used in accessibility testing. The sheet will also include links to the W3C Validator and WAVE. Works on both QA and Production domains.</p> 
