--- a/bookmarklet/index.html
+++ b/bookmarklet/index.html
@@ -12,6 +12,6 @@ title: "Useful Bookmarklets"
 
 <p>Used to retrieve and output a spreadhseet of <strong>all</strong> pages on a careers site based on sitemap.xml. Works on both QA and Production domains.</p> 
 
-<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/a11y.js'); document.body.appendChild(jsCode);}());">Career Site Pages (A11y Testing)</a>
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/a11y-test.js'); document.body.appendChild(jsCode);}());">Career Site Pages (A11y Testing)</a>
 
 <p>Used to retrieve and output a spreadhseet of <strong>necessary</strong> pages on a careers site that will be used in accessibility testing. The sheet will also include links to the W3C Validator and WAVE. Works on both QA and Production domains.</p> 
