--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ card: true
 
 <p>Welcome to {{ site.company-name }}'s open design and development resource! We believe in open standards, transparency, collaboration and want to give back to a community that has given so much to us! Feel free to contribute to these documents or fork and use as a basis for your own design and development standards.</p>
 
+<h2>Explore</h2>
+
 <ul class="card">
 
 	<li class="card__item">
