--- a/bookmarklet/index.html
+++ b/bookmarklet/index.html
@@ -2,7 +2,15 @@
 title: "Useful Bookmarklets"
 ---
 
-<p>Drag the following bookmarklets to your browser's bookmark folder or bar.</p>
+<p>Drag the following bookmarklets to your browser's bookmark folder or bar. When on a specifc page, click on the bookmarklet to run it.</p>
+
+<h2>Accessibility Testing</h2>
+
+<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/a11y-test.js'); document.body.appendChild(jsCode);}());">A11y Test (Career Site)</a>
+
+<p>Used to retrieve and output a spreadhseet of <strong>necessary</strong> pages on a careers site that will be used in accessibility testing. The sheet will also include links to the W3C Validator and WAVE. Works on both QA and Production domains.</p>
+
+<h2>General Utilities</h2>
 
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/automated-publish.js'); document.body.appendChild(jsCode);}());">Career Site Publish</a>
 
@@ -11,7 +19,3 @@ title: "Useful Bookmarklets"
 <a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/sitemap.js'); document.body.appendChild(jsCode);}());">Sitemap (Career Site)</a>
 
 <p>Used to retrieve and output a spreadhseet of <strong>all</strong> pages on a careers site based on sitemap.xml. Works on both QA and Production domains.</p> 
-
-<a class="btn" href="javascript: (function () { var jsCode = document.createElement('script'); jsCode.setAttribute('src', 'https://radancy.dev/bookmarklet/a11y-test.js'); document.body.appendChild(jsCode);}());">A11y Test (Career Site)</a>
-
-<p>Used to retrieve and output a spreadhseet of <strong>necessary</strong> pages on a careers site that will be used in accessibility testing. The sheet will also include links to the W3C Validator and WAVE. Works on both QA and Production domains.</p> 
