--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@ card: true
 <ul class="card">
 
 	<li class="card__item">
+
+	  <div class="card__thumbnail">
+
+		<img alt="" src="img/thumb-a11y.png">
+
+	  </div>
   
 	  <div class="card__content">
 
@@ -26,6 +32,12 @@ card: true
 	</li>
 
 	<li class="card__item">
+
+		<div class="card__thumbnail">
+
+			<img alt="" src="img/thumb-component.png">
+	
+		</div>
   
 		<div class="card__content">
   
@@ -42,6 +54,12 @@ card: true
 	  </li>
 
 	  <li class="card__item">
+
+		<div class="card__thumbnail">
+
+			<img alt="" src="img/thumb-magicbullet.png">
+	
+		</div>
   
 		<div class="card__content">
   
@@ -58,6 +76,12 @@ card: true
 	  </li>
 
 	  <li class="card__item">
+
+		<div class="card__thumbnail">
+
+			<img alt="" src="img/thumb-blog.png">
+	
+		</div>
   
 		<div class="card__content">
   
@@ -74,6 +98,12 @@ card: true
 	  </li>
 
 	  <li class="card__item">
+
+		<div class="card__thumbnail">
+
+			<img alt="" src="img/thumb-ui-standards.png">
+	
+		</div>
   
 		<div class="card__content">
   
