Floating Labels Update

--- a/_posts/2021-06-18-floating-labels/2021-06-18-floating-labels.html
+++ b/_posts/2021-06-18-floating-labels/2021-06-18-floating-labels.html
@@ -14,7 +14,7 @@ title: "How to Float Form Labels"
 
 <div class="warning">
 
-  <p><strong>Anti-Pattern:</strong> This is considered an anti-pattern. Including a visible label, often outside of the field, is <em>always the best solution</em>. Please understand the <a href="https://medium.com/simple-human/floating-labels-are-a-bad-idea-82edb64220f6">risks</a> associated with this technique before using.</p>
+  <p><strong>Anti-Pattern:</strong> This is considered an anti-pattern. Including a visible and static label, often outside of the field, is <em>always the best solution</em>. Please understand the <a href="https://medium.com/simple-human/floating-labels-are-a-bad-idea-82edb64220f6">risks</a> associated with this technique before using.</p>
 
 </div>
 
@@ -34,7 +34,7 @@ title: "How to Float Form Labels"
 
 <h3>HTML</h3>
 
-{% highlight html %}{% include_relative form-example-1.html %}{% endhighlight %}
+{% highlight html %}{% include_relative form-example-2.html %}{% endhighlight %}
 
 <h2 id="example-3">Example 3: Outer Float (CSS and JavaScript)</h2>
 
@@ -42,7 +42,7 @@ title: "How to Float Form Labels"
 
 <div class="note">
 
-  <p><strong>Note:</strong> Use in circumstances when fields are dynamic in nature.</p>
+  <p><strong>Note:</strong> Use in circumstances when fields are dynamic in nature or include pre-populated fields on page load.</p>
 
 </div>
 
