--- a/_posts/2021-06-18-floating-labels/form-example-2.html
+++ b/_posts/2021-06-18-floating-labels/form-example-2.html
@@ -1,38 +1,42 @@
-<form class="outer-float">
+<form class="search-form outer-float">
 
-    <div class="field-container">
+  <div class="search-form-container">
+
+    <div class="search-form-item">
   
-      <input id="outer-item-1" required>
+      <input id="item-4" required>
   
-      <label for="outer-item-1">Enter a Keyword</label>
-  
-    </div>
-  
-    <div class="field-container">
-  
-      <input id="outer-item-2" required>
-  
-      <label for="outer-item-2">City, State</label>
+      <label for="item-4">Enter a Keyword</label>
   
     </div>
   
-    <div class="field-container">
+    <div class="search-form-item">
   
-      <select id="outer-item-3" required>
+      <input id="item-5" required>
+  
+      <label for="item-5">City, State</label>
+  
+    </div>
+  
+    <div class="search-form-item">
+  
+      <select id="item-6" required>
         <option></option>
         <option>10 Miles</option>
         <option>75 Miles</option>
         <option>500 Miles</option>
       </select>
   
-      <label for="outer-item-3">Radius</label>
+      <label for="item-6">Radius</label>
   
     </div>
   
-    <div class="field-container">
+    <div class="search-form-item">
   
       <input type="submit" value="Submit">
   
     </div>
+
+  </div>
   
-  </form>
+</form>
