--- a/_posts/2021-02-24-accessibility-overlay.html
+++ b/_posts/2021-02-24-accessibility-overlay.html
@@ -12,4 +12,4 @@ title: "Should I Use An Accessibility Overlay?"
 
 <img alt="Bugs Bunny says NO. He doesn't look very impressed." src="https://shouldiuseanaccessibilityoverlay.com/img/no.jpg">
 
-<p><a href="https://shouldiuseanaccessibilityoverlay.com">The answer is, of course, no. Find out why.</a></p>
+<p><a href="https://shouldiuseanaccessibilityoverlay.com">The answer, of course, is no.</a></p>
