Misc, mobile issues

--- a/_posts/2021-06-18-floating-labels/2021-06-18-floating-labels.html
+++ b/_posts/2021-06-18-floating-labels/2021-06-18-floating-labels.html
@@ -10,6 +10,7 @@ pronouns: He/Him
 role: Director, Accessibility
 tags: Article Accessibility Development
 title: "How to Float Form Labels"
+update: 2024-08-20 13:03:33
 ---
 
 <div class="warning">
@@ -57,4 +58,3 @@ title: "How to Float Form Labels"
 <h3>JavaScript</h3>
 
 {% highlight javascript %}{% include_relative init.js %}{% endhighlight %}
-
